# ProDBG

./: .clang-format  .coveralls.yml  .gitattributes  .gitignore  .gitignore.orig  .gitmodules  .travis.yml  .ycm_extra_conf.py  Cargo.toml  LICENCE  README.md  appveyor.yml  foo.txt  index.html  list.lnt  params.json  tundra.lua  uncrustify.cfg  uncrustify.sh  units.libs.lua  units.lua  units.misc.lua  units.plugins.lua  units.prodbg.lua  units.tests.lua  units.tools.lua
.github/workflow/: main.yml
.github/workflows/: main.yml
API/include/: PDBackend.h  PDCommon.h  PDReadWrite.h  PDUI.h  PDView.h  ProDBGAPI.h  pd_readwrite.h  pd_view.h
Data/Mac/: appnib.xib
api/: PDMessages.fbs  pd_messages.fbs
api/include/: PDMessages_generated.h  pd_backend.h  pd_backend_messages.h  pd_capstone.h  pd_common.h  pd_docking.h  pd_host.h  pd_id.h  pd_io.h  pd_keys.h  pd_log.h  pd_memory_view.h  pd_menu.h  pd_message_readwrite.h  pd_readwrite.h  pd_remote.h  pd_script.h  pd_ui.h  pd_ui_autogen.h  pd_ui_register_plugin.h  pd_view.h  rust_ui.rs
data/: c64_vice.cfg  default_layout.json  default_layout.yaml  default_layout_2.json  settings.json
data/config/: default.json
data/dark_theme/: style.rcc
data/keymaps/: default.json
data/mac/: appnib.xib  icon.icns  info.plist
data/scripts/: TestPrint.lua
data/shaders/: common.sh
data/syntaxfiles/: rust.tmLanguage.json
data/themes/: theme-3796.xml  theme-4967.xml  theme-6563.xml
examples/CrashingNative/: Crash1.c  Crash2.c
examples/Fake6502/: Fake6502.c  Fake6502Main.c  Fake6502Plugin.c
examples/angelscript_test/: angelscript_test.cpp
old/: DefaultSettings.xml  README.md  units.lua
old_delete_when_done/: prodbg copy.c_pp  settings.cpp
scripts/: build_win.bat  comment.txt  config.lnt  generate_version_header.py  generate_vs_solution.bat  linux_build_debug.sh  linux_build_debug_test.sh  linux_build_release.sh  mac_build_debug.sh  mac_build_release.sh  mac_build_test_release.sh  mac_clean.sh  mac_gen_xcode_solution.sh  mac_test.sh  mktags.bash  package_windows_build.py  run_all_tests.py  run_coverage.sh  run_tests.py  uncrustify.cfg  uncrustify.sh  unix_coverity_build.sh  unix_gcc_build_debug.sh  unix_gcc_build_release.sh  vcvarsx86_amd64.bat  win64_build_debug.cmd  win64_build_debug_test.cmd  win64_build_release.cmd  win64_gen_vs_solution.cmd  win64_launch_vs.cmd  win64_setenv_build_debug.cmd  win64_setenv_build_deploy.cmd  win64_setenv_build_release.cmd
src/: ProDBG.cs
src/addons/amiga_uae_plugin/: Cargo.toml
src/addons/amiga_uae_plugin/src/: debug_info.rs  gdb.rs  lib.rs
src/plugins/memory_view/: Cargo.toml  memory_view.cpp  memory_view.h  memory_view.json  memory_view_widget.cpp  memory_view_widget.h
src/plugins/memory_view/src/: address_input.rs  ascii_editor.rs  char_editor.rs  hex_editor.rs  lib.rs  number_view.rs  state.rs
src/plugins/registers_view/: Cargo.toml  register_view.json  registers_view.cpp  registers_view.h  registers_view.json
src/plugins/registers_view/src/: char_editor.rs  helper.rs  hex_editor.rs  lib.rs  number_view.rs
src/prodbg/main/: Cargo.toml  ProDBG.h  prodbg.cpp  prodbg.h  prodbg_version.h  settings.c  settings.cpp  settings.h
src/prodbg/main/linux/: linux_main.cpp  main.cpp
src/prodbg/main/mac/: Main.m  ProDBGView.h  ProDBGView.m  ProDBGView.mm  delegate.h  delegate.m  delegate.mm  main.m  prodbg_view.h  prodbg_view.mm
src/prodbg/main/src/: backend_plugin.rs  context.rs  dir_searcher.rs  docking.rs  docking_wrapper.rs  main.rs  menu.rs  session.rs  statusbar.rs  windows.rs
src/prodbg/main/src/windows/: keys.rs  mod.rs  window.rs
src/prodbg/main/src/windows/window/: keys.rs  layout.rs  menus.rs  mod.rs  mouse.rs  popup.rs
src/prodbg/main/src/windows/window/layout/: mod.rs  serialize_helper.rs
src/prodbg/main/windows/: resource.h  windows_win.cpp
src/prodbg/ui_testbench/: Cargo.toml
src/prodbg/ui_testbench/src/: main.rs
test_data/: settings.json  user_settings.json
testbed/: .gitignore  VS2010-GenerateSln.cmd  VS2012-GenerateSln.cmd  VS2012-Launch.cmd  tundra.lua  units.lua
(+1459 files in other folders)
