[package]
name = "prodbg_main"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]

# Call tundra to build all native code
build = "build.rs"

[[bin]]
name = "prodbg"

[dependencies]
notify = "^2.5.0"
libc = "0.2.0"
libloading = "0.2.0"

# These are here to get
# api_test = { path = "src/prodbg/tests/rust_api_test" }
# bitmap_memory = { path = "src/plugins/bitmap_memory" }

