[package]
name = "amiga_uae_plugin"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]

[lib]
name = "amiga_uae_plugin"
crate-type = ["dylib"]

[dependencies]
prodbg_api = { path = "../../../api/rust/prodbg" }
gdb_remote = { path = "../../crates/gdb-remote" }
amiga_hunk_parser = { path = "../../crates/amiga_hunk_parser" }
