[package]
name = "memory_view"
version = "0.0.1"
authors = ["Slava Baginov <slnpacifist@gmail.com>"]

[lib]
name = "memory_view"
crate-type = ["cdylib"]

[dependencies]
prodbg_api = { path = "../../../api/rust/prodbg" }
serde = "0.7.4"
serde_json = "0.7.0"
serde_macros = { path = "../../helpers/serde_macros" }
