[package]
name = "registers_view"
version = "0.0.1"
authors = ["Slava Baginov <slnpacifist@gmail.com>"]

[lib]
name = "registers_view"
crate-type = ["dylib"]

[dependencies]
prodbg_api = { path = "../../../api/rust/prodbg" }
serde = "0.7.4"
serde_json = "0.7.0"
serde_macros = { path = "../../helpers/serde_macros" }
number_view = { path = "../../helpers/number_view", features=["serialization"] }