[package]
name = "ui_testbench"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]

build = "../build.rs"

[dependencies]
libc = "0.2.0"
minifb = "0.5.1"
lazy_static = "0.1.*"
core = { path = "../core" }
bgfx_rs = { path = "../bgfx" }
imgui_sys = { path = "../imgui_sys" }
prodbg_api = { path = "../../../api/rust/prodbg" }

